fix for hide on mobile

--- a/styles/timeline-container.scss
+++ b/styles/timeline-container.scss
@@ -16,11 +16,6 @@
 		z-index: -1;
 	}
 
-	&--hide-on-mobile {
-		@include oGridRespondTo($until: M) {
-			display: none;
-		}
-	}
 }
 
 .n-storylines__scroll-container {
